sm/tests/compile-fail/macro-empty.rs
#[macro_use]
extern crate sm;

sm!{}
//~^ ERROR unexpected end of macro invocation
